plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.umc'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Security 및 소셜 로그인
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// 데이터 검증
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// 웹 관련
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// 데이터베이스 연동 (JPA + MySQL)
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.mysql:mysql-connector-j:9.2.0'




	// Swagger(API 명세서)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// 메일 서버와 연결해서 메일을 발송하는 라이브러리
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//메일 템플릿 설정을 위한 타임리프
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// AWS S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.636'

	// 개발 편의 기능
	// developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.734' // 최신 안정 버전 (2025년 기준)
	implementation 'com.amazonaws:aws-java-sdk-core:1.12.734'

	// 테스트 관련
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// .env 파일 환경 변수 로드를 위한 라이브러리
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'

	//kakao지도
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//웹소켓 채팅
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
}

test {
	useJUnitPlatform()
}
